# ortools-poc

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.py  scheduler.py  test.json  test_data.py  test_scheduler.py
app/: __init__.py  crud.py  main.py  scheduler.py
app/internal/: __init__.py  crud.py  database.py  direction.py  models.py  scheduler.py  timeaddr.py
app/models/: __init__.py  booking.py  direction.py  inout.py  mobility_assistance.py  program.py  schedule.py  task.py
app/routers/: direction.py  directions.py  program.py  programs.py  schedule.py  task.py
app/services/: database.py  direction.py  direction_service.py  greedy_scheduler.py  processor.py  schedule.py  scheduler.py
app/services/scheduler/: __init__.py  cp_sat_scheduler.py  greedy_scheduler.py  ortools_scheduler.py  vrptw_scheduler.py
data/booking/: Dispatch_Booking_List_nwHY1Nhn2m_06162025.json  Dispatch_Booking_List_nwHY1Nhn2m_06162025_opt.json  Dispatch_Booking_List_nwHY1Nhn2m_06172025.json  Dispatch_Booking_List_nwHY1Nhn2m_06182025.json  Dispatch_Booking_List_zCtPzYACEr_06042025.json  Dispatch_Booking_List_zCtPzYACEr_06092025.json  Dispatch_Booking_List_zCtPzYACEr_06132025.json  Dispatch_Booking_List_zamGVJISEr_05212025.json  Dispatch_Booking_List_zamGVJISEr_06092025.json  Dispatch_Booking_List_zamGVJISEr_06112025.json  simple-1.json  simple-2.json
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css  index.js
frontend/src/components/: Navbar.js
frontend/src/pages/: Home.js  Programs.js  (+1 more)
(+1 files in other folders)
